--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.7'
 
 services:
-  movies:
+
+  users:
+
     build: ./app
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -10,3 +12,17 @@ services:
       - 8000:8000
     env_file:
       - ./app/.env.dev
+    depends_on:
+      - labs-management-db
+
+  labs-management-db:
+    image: postgres:12-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=vladhoi
+      - POSTGRES_PASSWORD=wordpass
+      - POSTGRES_DB=labs_management_dev
+
+volumes:
+  postgres_data:
