--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.2.10
 attrs==20.2.0
+dj-database-url==0.5.0
 Django==3.1.2
 djangorestframework==3.12.1
+gunicorn==20.0.4
 iniconfig==1.0.1
 packaging==20.4
 pluggy==0.13.1
@@ -14,3 +16,4 @@ pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+whitenoise==5.2.0
