--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.7'
 
 services:
 
-  users:
-
+  api:
     build: ./app
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
