--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,7 +8,9 @@ click==7.1.2
 coverage==5.3
 dj-database-url==0.5.0
 Django==3.1.2
-djangorestframework==3.12.1
+django-templated-mail==1.1.1
+djangorestframework==3.11.1
+djoser==2.0.5
 flake8==3.8.4
 gunicorn==20.0.4
 idna==2.10
