--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -33,6 +33,7 @@ pytest-django==3.10.0
 pytz==2020.1
 regex==2020.9.27
 requests==2.24.0
+sentry-sdk==0.19.4
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
