--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -12,6 +12,7 @@ django-cors-headers==3.5.0
 django-templated-mail==1.1.1
 djangorestframework==3.11.1
 djoser==2.0.5
+drf-yasg==1.20.0
 flake8==3.8.4
 gunicorn==20.0.4
 idna==2.10
